# Scheduler-pattern-implementation

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: aggregate_by_key_ut.cpp.322100DC0E119845.idx  any.h.214B980B73193053.idx  different_callable_objects.cpp.060ECF4E94B2AB51.idx  exceptions.h.1837F1283DDA7741.idx  getResult_const_ref.cpp.6E2B9CEAAB4028B0.idx  invoke.h.116F1423F9089528.idx  main.cpp.6F4C5465A560AB20.idx  my_exceptions.h.4FBBDE90B7B92388.idx  my_stl.h.A1A2AECB4855932D.idx  my_stl_any.h.5F6521850F946A57.idx  my_stl_invoke.h.2D1F4A98B0C7496B.idx  my_stl_utilities.h.A6A1BAFD51237B4A.idx  number_of_calls_calculate.cpp.6F8B4DD981B0A51B.idx  scheduler.h.3F036E1D7946BD78.idx  throw_exception.cpp.F12F87385C82F081.idx
lib/: my_exceptions.h  my_stl_any.h  my_stl_invoke.h  my_stl_utilities.h  scheduler.h
tests/: CMakeLists.txt  different_callable_objects.cpp  getResult_const_ref.cpp  graph_tests.cpp  number_of_calls_calculate.cpp  throw_exception.cpp
